--- a/templates/mydata.html
+++ b/templates/mydata.html
@@ -14,7 +14,6 @@
       crossorigin="anonymous"
     />
 
-    <link href="../static/home.css" rel="stylesheet" />
     <link href="../static/nav.css" rel="stylesheet" />
 
     <base href="http://127.0.0.1:8000/" />
@@ -58,44 +57,13 @@
 
       <!-- Header -->
 
-      <div class="position-relative overflow-hidden p-3 p-md-5 mt-md-3 mb-md-3 text-center header-grad rounded">
-        <div class="col-md-5 p-lg-5 mx-auto my-5">
-          <h1 class="display-4 font-weight-normal">Safely Stat</h1>
-          <p class="lead font-weight-normal">A Differential Privacy Platform</p>
-          <a class="btn btn-outline-secondary upload-btn" href="mydata">Upload Your Data</a>
-        </div>
-        <div class="product-device shadow-sm d-none d-md-block"></div>
-        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-12 col-md-6 mt-3 mb-3">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">About</h5>
-              <p class="card-text">
-                Created by two students at the University of North Carolina at Chapel Hill
-                text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-12 col-md-6 mt-3 mb-3">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Learn More</h5>
-              <p class="card-text">Explore the site to learn more</p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <h1>MyData</h1>
 
     </div>
 
     <footer class="black-bg footer-row footer">
-      <p class="font-weight-normal white footer-item">Safely Stat</p>
-   </footer>
+        <p class="font-weight-normal white footer-item">Safely Stat</p>
+     </footer>
     <!-- <script src="../static/format.js"></script> -->
   </body>
 </html>
