--- a/static/home.css
+++ b/static/home.css
@@ -26,6 +26,12 @@
   border-color: black;
 }
 .upload-btn:hover {
-  color:white;
+  color:lightgray;
   background-color: black;
+}
+
+.card {
+  border:none;
+  background-color: rgb(250,250,250);
+  box-shadow: 5px 5px 5px rgb(245,245,245);
 }
