upload page frontend done

--- a/templates/index.html
+++ b/templates/index.html
@@ -95,15 +95,28 @@
             <div class="card-body">
               <h5 class="card-title">About</h5>
               <p class="card-text">
-                Created by two students at the University of North Carolina at
-                Chapel Hill text ever since the 1500s, when an unknown printer
-                took a galley of type and scrambled it to make a type specimen
-                book. It has survived not only five centuries, but also the leap
-                into electronic typesetting, remaining essentially unchanged. It
-                was popularised in the 1960s with the release of Letraset sheets
-                containing Lorem Ipsum passages, and more recently with desktop
-                publishing software like Aldus PageMaker including versions of
-                Lorem Ipsum.
+                This project was created by two students at the University of North Carolina at
+                Chapel Hill.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-12 col-md-6 mt-3 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Differential Privacy</h5>
+              <p class="card-text">Differential Privacy is...</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-12 col-md-6 mt-3 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Choosing Epsilon</h5>
+              <p class="card-text">
+                Epsilon is the privacy parameter...
               </p>
             </div>
           </div>
@@ -113,7 +126,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Learn More</h5>
-              <p class="card-text">Explore the site to learn more</p>
+              <p class="card-text">
+                To learn more about Differential Privacy and the tools that power this site, visit...
+              </p>
             </div>
           </div>
         </div>
