--- a/templates/upload.html
+++ b/templates/upload.html
@@ -89,26 +89,26 @@
               class="form-control desc-box"
               id="datasetDesc"
               rows="4"
-              placeholder="My dataset"
+              placeholder="This dataset contains..."
               name="description"
             ></textarea>
 
-            <div class="form-check form-switch mt-2">
+            <!-- <div class="form-check form-switch mt-2">
               <label class="form-check-label" for="dpType"
                 >Global or Local</label
               >
               <input class="form-check-input" type="checkbox" id="dpType" name="dp_type"/>
-            </div>
+            </div> -->
             <!-- Stats -->
-            <div id="stats" class="mt-4">
-                <h5>Field Statistics</h5>
+            <div id="stats" class="mt-4 border-top">
+                <h5 class="mt-3">Field Statistics</h5>
                 <p class="mt-2 mb-2">In the following section, specify the fields (columns) in your dataset and the corresponding statistics
-                  that you wish to include in the gallery piece. To add a field, press the "Add Column" button. To add a
+                  that you wish to include in the gallery piece. To add a field, press the "Add Field" button. To add a
                   statistic for a column, press the "Add Stat" button. Please note, when you upload your CSV dataset, your data
                   will be automatically uploaded and you will be redirected to your MyData page.
                 </p>
                 <div class="mt-2 mb-2">
-                    <button type="button" class="btn btn-outline-dark" id="add-col">Add Column</button>
+                    <button type="button" class="btn btn-outline-dark" id="add-col">Add Field</button>
                 </div>
                 <div class="container-fluid" id="add-col-btn">
                     <div class="row" id="col-stat-box">
@@ -167,9 +167,11 @@
                 </div>
             </div>
             <!-- Stats -->
-            <h5 class="mt-4">Upload CSV Dataset</h5>
+            <div class="border-top mt-3">
+            <h5 class="mt-3">Upload CSV Dataset</h5>
             <label for="formFile" class="form-label">CSV File</label>
             <input class="form-control" type="file" id="formFile">
+          </div>
           </form>
         </div>
       </div>
