--- a/static/upload.css
+++ b/static/upload.css
@@ -3,7 +3,7 @@
     padding: 1vw;
     border:none;
     background-color: rgb(250,250,250);
-    box-shadow: 5px 5px 5px rgb(245,245,245);
+    box-shadow: 0 0 5px rgb(230, 230, 230);
     width: 98vw;
 }
 
