--- a/templates/mydata.html
+++ b/templates/mydata.html
@@ -91,11 +91,17 @@
             <div class="card-body">
               <h3 class="card-title">Upload Data</h3>
               <p class="card-text">
-                To upload your CSV data, click the button below.
+                To create a differentially private dataset, upload your CSV data using one of the two options below.
               </p>
-              <a class="btn btn-outline-secondary upload-btn" href="upload"
-                >Upload Your Data</a
-              >
+              <h5>Global Model</h5>
+              <p>Your raw data will be sent to our database. Noise will be injected for all user defined queries.</p>
+              <a class="btn btn-outline-secondary upload-btn" href="upload-global"
+                >Global Upload</a>
+              <h5 class="mt-3">Local Model</h5>
+              <p>Noise will be injected when you upload your data, ensuring we cannot see your sensitive data. 
+                However, statistics accuracy is generally decreased in this model.</p>
+              <a class="btn btn-outline-secondary upload-btn" href="upload-local"
+                >Local Upload</a>
             </div>
           </div>
         </div>
