--- a/templates/uploadglobal.html
+++ b/templates/uploadglobal.html
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="upload-form col-sm-12">
           <h3>Upload Dataset</h3>
-          <form id="dataInput">
+          <form id="dataInput" class="border-top">
             <label for="datasetTitle" class="form-label mt-2">Title</label>
             <input
               type="text"
@@ -102,23 +102,23 @@
             <!-- Stats -->
             <div id="stats" class="mt-4 border-top">
                 <h5 class="mt-3">Field Statistics</h5>
-                <p class="mt-2 mb-2">In the following section, specify the fields (columns) in your dataset and the corresponding statistics
+                <p class="mt-2 mb-2 container-fluid">In the following section, specify the fields (columns) in your dataset and the corresponding statistics
                   that you wish to include in the gallery piece. To add a field, press the "Add Field" button. To add a
                   statistic for a column, press the "Add Stat" button. Please note, when you upload your CSV dataset, your data
                   will be automatically uploaded and you will be redirected to your MyData page.
                 </p>
-                <div class="mt-2 mb-2">
+                <div class="mt-3 mb-2 container-fluid">
                     <button type="button" class="btn btn-outline-dark" id="add-col">Add Field</button>
                 </div>
                 <div class="container-fluid" id="add-col-btn">
                     <div class="row" id="col-stat-box">
                         <div class="col-sm-6">
-                            <label for="columnTitle" class="form-label mt-2">Column title</label>
+                            <label for="columnTitle" class="form-label mt-2">Field Name</label>
                             <input
                               type="text"
                               class="form-control"
                               id="columnTitle"
-                              placeholder="Column name"
+                              placeholder="Field one"
                               name="col_name"
                             />
 
@@ -170,7 +170,7 @@
             <div class="border-top mt-3">
             <h5 class="mt-3">Upload CSV Dataset</h5>
             <label for="formFile" class="form-label">CSV File</label>
-            <input class="form-control" type="file" id="formFile">
+            <input class="form-control" type="file" id="csvFile">
           </div>
           </form>
         </div>
@@ -182,6 +182,7 @@
 
     <!-- Scripts -->
     <script src="../static/format.js"></script>
+    <script src="../static/upload.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
