--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -24,52 +24,7 @@
     <div class="container-fluid">
 
       <!-- Partial Boostrap Nav -->
-      <div class="row">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-          <div class="container-fluid">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarTogglerDemo3"
-              aria-controls="navbarTogglerDemo3"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo3">
-              <div>
-                <a href="">
-                  <svg
-                    version="1.1"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="210"
-                    height="60"
-                  >
-                    <path
-                      fill="#ffffff"
-                      d="M20.6,24.244l10.556,0l0-2.128l-10.556,0q-2.072,0-3.472,1.624q-1.428,1.652-1.428,4.004q0,2.128,1.428,3.696q1.4,1.596,3.472,1.596l2.8,0l2.856,0q1.26,0,2.24,1.064q0.924,1.12,0.924,2.436q0,1.568-0.91,2.548t-2.254,0.98l-10.556,0l0,1.736l10.556,0q2.1,0,3.5-1.456t1.4-3.808q0-2.128-1.4-3.696q-1.428-1.568-3.5-1.568l-2.856,0l-2.8,0q-1.288,0-2.212-1.12q-0.952-1.036-0.952-2.408q0-1.568,0.91-2.534t2.254-0.966z M42.54752,22.088q-3.136,0-5.264,2.268q-2.1,2.24-2.1,5.46l0,11.984l1.764,0l0-8.792l11.256,0l0,8.792l1.764,0l0-11.984q0-3.22-2.1-5.46q-2.184-2.268-5.32-2.268z M48.20352,31.272l-11.256,0l0-1.456q0-2.408,1.624-4.172q1.652-1.792,3.976-1.792t4.032,1.792q1.624,1.764,1.624,4.172l0,1.456z M56.09504,23.908l13.356,0l0-1.736l-15.092,0l0,0.336l0,19.292l1.736,0l0-8.736l7.084,0l0-1.82l-7.084,0l0-7.336z M74.34656,36.424q0-1.344,0.952-2.436q0.952-1.148,2.296-1.148l0.364,0l5.236,0l0-1.736l-5.236,0l-0.364,0q-1.428-0.28-2.338-1.232t-0.91-2.268q0-1.652,0.966-2.618t2.646-0.966l9.52,0l0-1.764l-9.52,0q-2.156,0-3.752,1.596q-1.596,1.54-1.596,3.752q0,1.4,0.532,2.548t1.568,1.652q-1.036,0.756-1.568,1.988t-0.532,2.632q0,2.184,1.596,3.724q1.624,1.624,3.752,1.624l9.52,0l0-1.848l-9.52,0q-1.68,0-2.646-0.952t-0.966-2.548z M91.14208,41.856l13.692,0l0-1.428l-11.956,0l0-18.228l-1.736,0l0,19.656z M122.9176,22.2l-1.736,0l0,2.072q0,2.576-1.792,4.312q-1.764,1.68-4.2,1.68q-2.604,0-4.284-1.68t-1.68-4.312l0-2.072l-1.736,0l0,2.072q0,3.136,1.904,5.32q1.876,2.212,4.76,2.408l0,9.828l1.764,0l0-9.828q2.94-0.224,4.956-2.408q2.044-2.184,2.044-5.32l0-2.072z M140.54864,24.244l10.556,0l0-2.128l-10.556,0q-2.072,0-3.472,1.624q-1.428,1.652-1.428,4.004q0,2.128,1.428,3.696q1.4,1.596,3.472,1.596l2.8,0l2.856,0q1.26,0,2.24,1.064q0.924,1.12,0.924,2.436q0,1.568-0.91,2.548t-2.254,0.98l-10.556,0l0,1.736l10.556,0q2.1,0,3.5-1.456t1.4-3.808q0-2.128-1.4-3.696q-1.428-1.568-3.5-1.568l-2.856,0l-2.8,0q-1.288,0-2.212-1.12q-0.952-1.036-0.952-2.408q0-1.568,0.91-2.534t2.254-0.966z M169.49616,22.2l-15.176,0l0,1.708l6.888,0l0,17.948l1.736,0l0-17.948l6.552,0l0-1.708z M180.32768,22.088q-3.136,0-5.264,2.268q-2.1,2.24-2.1,5.46l0,11.984l1.764,0l0-8.792l11.256,0l0,8.792l1.764,0l0-11.984q0-3.22-2.1-5.46q-2.184-2.268-5.32-2.268z M185.98368,31.272l-11.256,0l0-1.456q0-2.408,1.624-4.172q1.652-1.792,3.976-1.792t4.032,1.792q1.624,1.764,1.624,4.172l0,1.456z M206.3632,22.2l-15.176,0l0,1.708l6.888,0l0,17.948l1.736,0l0-17.948l6.552,0l0-1.708z"
-                    />
-                    <path fill="#" d="" />
-                  </svg>
-                </a>
-              </div>
-              <ul class="navbar-nav me-auto mb-xl-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="gallery">Gallery</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="mydata">MyData</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
+      {% include 'nav.html' %}
 
       <!-- Header -->
       <h1>Gallery</h1>
