--- a/templates/mydata.html
+++ b/templates/mydata.html
@@ -63,19 +63,29 @@
               <p class="card-text">
                 To create a gallery piece, upload your CSV data using one of the two options below.
               </p>
+            </div>
+          </div>
+
+          <div class="card mt-2">
+            <div class="card-body">
               <h5>Global Model</h5>
               <p>Your raw data will be sent to our database. Noise will be injected for all user defined queries.</p>
               <p>Supported statistics: Bounded Mean, Bounded Sum, Median, Maximum, Minimum, Standard Deviation, Variance.</p>
-              <a class="btn btn-outline-secondary upload-btn" href="{{ url_for('main.upload_page_global')}}"
+              <a class="btn btn-outline-secondary upload-btn" href="{{ url_for('page.upload_page_global')}}"
                 >Global Upload</a>
+              </div>
+            </div>
+
+          <div class="card mt-2">
+            <div class="card-body">
               <h5 class="mt-3">Local Model</h5>
               <p>Noise will be injected when you upload your data, ensuring we cannot see your sensitive data. 
                 However, statistics accuracy is generally decreased in this model.</p>
                 <p>Supported statistics: Count</p>
-              <a class="btn btn-outline-secondary upload-btn" href="{{ url_for('main.upload_page_local')}}"
+              <a class="btn btn-outline-secondary upload-btn" href="{{ url_for('page.upload_page_local')}}"
                 >Local Upload</a>
+              </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
