--- a/static/home.css
+++ b/static/home.css
@@ -17,9 +17,28 @@
   text-decoration: none;
 }
 
+.h-text {
+  color: white;
+  mix-blend-mode:difference;
+}
+
 .header-grad {
-  background-image: linear-gradient(45deg, rgb(12,22,151), rgb(248,248,255));
+  background: linear-gradient(45deg, rgb(248,248,255), rgb(193, 193, 228), rgb(205, 205, 212), rgb(163, 165, 190));
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
   box-shadow: 0 0 5px rgb(200, 200, 200);
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 .upload-btn {
