--- a/templates/nav.html
+++ b/templates/nav.html
@@ -14,30 +14,80 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo3">
           <div>
-            <a href="">
-              <svg
-                version="1.1"
-                xmlns="http://www.w3.org/2000/svg"
-                width="210"
-                height="60"
-              >
-                <path
-                  fill="#ffffff"
-                  d="M20.6,24.244l10.556,0l0-2.128l-10.556,0q-2.072,0-3.472,1.624q-1.428,1.652-1.428,4.004q0,2.128,1.428,3.696q1.4,1.596,3.472,1.596l2.8,0l2.856,0q1.26,0,2.24,1.064q0.924,1.12,0.924,2.436q0,1.568-0.91,2.548t-2.254,0.98l-10.556,0l0,1.736l10.556,0q2.1,0,3.5-1.456t1.4-3.808q0-2.128-1.4-3.696q-1.428-1.568-3.5-1.568l-2.856,0l-2.8,0q-1.288,0-2.212-1.12q-0.952-1.036-0.952-2.408q0-1.568,0.91-2.534t2.254-0.966z M42.54752,22.088q-3.136,0-5.264,2.268q-2.1,2.24-2.1,5.46l0,11.984l1.764,0l0-8.792l11.256,0l0,8.792l1.764,0l0-11.984q0-3.22-2.1-5.46q-2.184-2.268-5.32-2.268z M48.20352,31.272l-11.256,0l0-1.456q0-2.408,1.624-4.172q1.652-1.792,3.976-1.792t4.032,1.792q1.624,1.764,1.624,4.172l0,1.456z M56.09504,23.908l13.356,0l0-1.736l-15.092,0l0,0.336l0,19.292l1.736,0l0-8.736l7.084,0l0-1.82l-7.084,0l0-7.336z M74.34656,36.424q0-1.344,0.952-2.436q0.952-1.148,2.296-1.148l0.364,0l5.236,0l0-1.736l-5.236,0l-0.364,0q-1.428-0.28-2.338-1.232t-0.91-2.268q0-1.652,0.966-2.618t2.646-0.966l9.52,0l0-1.764l-9.52,0q-2.156,0-3.752,1.596q-1.596,1.54-1.596,3.752q0,1.4,0.532,2.548t1.568,1.652q-1.036,0.756-1.568,1.988t-0.532,2.632q0,2.184,1.596,3.724q1.624,1.624,3.752,1.624l9.52,0l0-1.848l-9.52,0q-1.68,0-2.646-0.952t-0.966-2.548z M91.14208,41.856l13.692,0l0-1.428l-11.956,0l0-18.228l-1.736,0l0,19.656z M122.9176,22.2l-1.736,0l0,2.072q0,2.576-1.792,4.312q-1.764,1.68-4.2,1.68q-2.604,0-4.284-1.68t-1.68-4.312l0-2.072l-1.736,0l0,2.072q0,3.136,1.904,5.32q1.876,2.212,4.76,2.408l0,9.828l1.764,0l0-9.828q2.94-0.224,4.956-2.408q2.044-2.184,2.044-5.32l0-2.072z M140.54864,24.244l10.556,0l0-2.128l-10.556,0q-2.072,0-3.472,1.624q-1.428,1.652-1.428,4.004q0,2.128,1.428,3.696q1.4,1.596,3.472,1.596l2.8,0l2.856,0q1.26,0,2.24,1.064q0.924,1.12,0.924,2.436q0,1.568-0.91,2.548t-2.254,0.98l-10.556,0l0,1.736l10.556,0q2.1,0,3.5-1.456t1.4-3.808q0-2.128-1.4-3.696q-1.428-1.568-3.5-1.568l-2.856,0l-2.8,0q-1.288,0-2.212-1.12q-0.952-1.036-0.952-2.408q0-1.568,0.91-2.534t2.254-0.966z M169.49616,22.2l-15.176,0l0,1.708l6.888,0l0,17.948l1.736,0l0-17.948l6.552,0l0-1.708z M180.32768,22.088q-3.136,0-5.264,2.268q-2.1,2.24-2.1,5.46l0,11.984l1.764,0l0-8.792l11.256,0l0,8.792l1.764,0l0-11.984q0-3.22-2.1-5.46q-2.184-2.268-5.32-2.268z M185.98368,31.272l-11.256,0l0-1.456q0-2.408,1.624-4.172q1.652-1.792,3.976-1.792t4.032,1.792q1.624,1.764,1.624,4.172l0,1.456z M206.3632,22.2l-15.176,0l0,1.708l6.888,0l0,17.948l1.736,0l0-17.948l6.552,0l0-1.708z"
-                />
-                <path fill="#" d="" />
+            <a href="{{ url_for('page.index') }}"> 
+
+              <?xml version="1.0" standalone="no"?>
+              <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
+               "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
+              <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+               width="100pt" height="20pt" viewBox="0 0 1000.000000 207.000000"
+               preserveAspectRatio="xMidYMid meet">
+              
+              <g transform="translate(0.000000,207.000000) scale(0.100000,-0.100000)"
+              fill="#FFFFFF" stroke="none">
+              <path d="M200 2025 l0 -45 -50 0 -50 0 0 -945 0 -945 944 0 945 0 3 47 3 48
+              43 3 42 3 0 940 0 939 -940 0 -940 0 0 -45z m460 -265 l0 -50 384 0 385 0 3
+              48 3 47 190 0 190 0 3 -192 2 -193 -50 0 -50 0 0 -385 0 -385 50 0 50 0 -2
+              -192 -3 -193 -190 0 -190 0 -3 48 -3 47 -385 0 -384 0 0 -50 0 -50 -190 0
+              -190 0 0 195 0 195 45 0 45 0 0 385 0 385 -45 0 -45 0 0 195 0 195 190 0 190
+              0 0 -50z"/>
+              <path d="M667 1513 c-4 -3 -7 -26 -7 -50 l0 -43 -45 0 -45 0 0 -385 0 -385 44
+              0 45 0 3 -47 3 -48 383 -3 382 -2 0 50 0 50 50 0 50 0 0 385 0 385 -50 0 -50
+              0 0 50 0 50 -378 0 c-208 0 -382 -3 -385 -7z"/>
+              <path d="M2532 1480 c-142 -30 -225 -132 -208 -256 13 -99 72 -147 276 -225
+              156 -59 192 -79 208 -114 46 -99 -33 -179 -178 -179 -64 -1 -82 3 -121 26 -47
+              28 -79 75 -79 117 0 20 -4 22 -62 19 l-63 -3 3 -40 c12 -162 206 -273 411
+              -235 157 28 241 114 241 245 0 74 -18 112 -75 163 -44 39 -85 58 -285 132
+              -111 40 -148 80 -135 141 9 42 66 86 120 95 97 14 174 -16 203 -78 17 -37 17
+              -37 80 -38 70 0 71 2 47 71 -20 57 -75 112 -137 139 -55 24 -180 34 -246 20z"/>
+              <path d="M7374 1480 c-136 -29 -214 -110 -214 -225 0 -120 67 -179 292 -261
+              147 -54 194 -86 204 -140 9 -51 -12 -91 -65 -122 -62 -36 -173 -38 -239 -4
+              -48 25 -82 73 -82 115 0 27 -1 27 -66 27 l-67 0 6 -45 c27 -194 268 -298 494
+              -213 173 64 220 271 88 387 -43 38 -89 59 -249 117 -162 58 -202 104 -160 185
+              29 57 134 84 226 59 38 -11 98 -69 98 -95 0 -12 15 -15 66 -15 l66 0 -7 33
+              c-18 81 -69 142 -147 177 -54 23 -180 34 -244 20z"/>
+              <path d="M3385 1458 c-23 -62 -54 -154 -165 -480 l-129 -378 69 0 68 0 35 103
+              34 102 168 0 168 0 35 -102 34 -103 68 0 68 0 -145 435 -145 435 -79 0 c-55 0
+              -81 -4 -84 -12z m146 -335 c34 -104 64 -194 67 -200 3 -10 -27 -13 -131 -13
+              l-135 0 66 200 c37 110 68 200 69 200 1 0 29 -84 64 -187z"/>
+              <path d="M4010 1035 l0 -435 65 0 65 0 0 190 0 190 185 0 185 0 0 60 0 60
+              -185 0 -185 0 0 130 0 130 200 0 200 0 0 55 0 55 -265 0 -265 0 0 -435z"/>
+              <path d="M4730 1035 l0 -435 275 0 275 0 0 55 0 55 -207 2 -208 3 -3 133 -3
+              132 201 0 200 0 0 55 0 55 -197 2 -198 3 -3 133 -3 132 211 0 210 0 0 55 0 55
+              -275 0 -275 0 0 -435z"/>
+              <path d="M5520 1035 l0 -435 250 0 250 0 0 55 0 55 -185 0 -185 0 0 380 0 380
+              -65 0 -65 0 0 -435z"/>
+              <path d="M5963 1458 c2 -7 70 -122 151 -256 l146 -243 0 -180 0 -179 65 0 65
+              0 0 180 0 180 151 247 c83 137 153 251 156 256 2 4 -31 7 -74 7 l-78 0 -97
+              -168 c-54 -92 -104 -176 -111 -186 -12 -17 -23 -2 -119 165 l-106 184 -77 3
+              c-60 2 -76 0 -72 -10z"/>
+              <path d="M7900 1415 l0 -55 140 0 140 0 0 -380 0 -380 65 0 65 0 0 380 0 380
+              140 0 140 0 0 55 0 55 -345 0 -345 0 0 -55z"/>
+              <path d="M8865 1458 c-3 -7 -59 -173 -126 -368 -66 -195 -132 -385 -144 -422
+              l-24 -68 69 0 68 0 18 53 c9 28 25 76 36 105 l19 52 168 0 167 0 34 -105 34
+              -105 69 0 c61 0 68 2 63 18 -3 9 -68 204 -144 432 l-139 415 -81 3 c-60 2 -84
+              -1 -87 -10z m150 -340 c32 -101 60 -189 63 -195 3 -10 -27 -13 -131 -13 l-135
+              0 65 195 c35 107 68 195 72 195 4 0 34 -82 66 -182z"/>
+              <path d="M9300 1415 l0 -55 140 0 140 0 0 -380 0 -380 65 0 65 0 0 380 0 380
+              140 0 140 0 0 55 0 55 -345 0 -345 0 0 -55z"/>
+              </g>
               </svg>
+              
+
             </a>
           </div>
           <ul class="navbar-nav me-auto mb-xl-0">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
+              <a class="nav-link" href="{{ url_for('page.index') }}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('main.gallery') }}">Gallery</a>
+              <a class="nav-link" href="{{ url_for('page.about') }}">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('main.mydata') }}">MyData</a>
+              <a class="nav-link" href="{{ url_for('page.gallery') }}">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('page.mydata') }}">MyData</a>
             </li>
           </ul>
         </div>
