--- a/static/mydata.css
+++ b/static/mydata.css
@@ -4,6 +4,11 @@
     box-shadow: 0 0 5px rgb(230, 230, 230);
 }
 
+.card:hover {
+    transition: 1s;
+    background-color: rgb(227, 227, 255);
+}
+
 .upload-btn {
     color:black;
     border-color: black;
