--- a/static/nav.css
+++ b/static/nav.css
@@ -38,11 +38,16 @@ html, body {
     }
   }
 
+.nav-link:hover {
+  text-decoration: overline;
+}
+
 .footer {
     position:absolute;
     bottom:0;
     width:100%;
     height: 100px;
+    display: flex;
 }
 
 .footer-item {
@@ -55,4 +60,12 @@ html, body {
 
 .white {
   color: lightgray;
+}
+
+.bg-dark {
+  background-color: black !important;
+}
+
+.f-con {
+  margin-left: 1.5rem;
 }
