--- a/templates/about.html
+++ b/templates/about.html
@@ -72,9 +72,7 @@
       </div>
     </div>
 
-    <footer class="black-bg footer-row footer">
-      <p class="font-weight-normal white footer-item">Safely Stat</p>
-    </footer>
+    {% include 'footer.html' %}
     <!-- <script src="../static/format.js"></script> -->
 
     <script
