--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -15,6 +15,7 @@
     />
 
     <link href="../static/nav.css" rel="stylesheet" />
+    <link href="../static/gallery.css" rel="stylesheet" />
 
     <base href="http://127.0.0.1:8000/" />
 
@@ -27,13 +28,41 @@
       {% include 'nav.html' %}
 
       <!-- Header -->
-      <h1>Gallery</h1>
+      <div class="row">
+        <div class="g-grad">
+          <h1 class="g-title mt-2">Gallery</h1>
+        </div>
+        
+      </div>
+      
+      <div class="row">
+
+        {%for s in stats%}
+
+        
+          <div class="col-sm-12 col-md-4 mt-3 mb-3">
+            <a href= {{ url_for( 'data.get_datastats' , datastatid = s['_id']) }} >
+              <div class="card gallery-card">
+                <div class="card-body">
+                  <h5 class="card-title g-text">{{s['title']}}</h5>
+                  <p class="card-text g-desc">
+                    {{s['description']}}
+                  </p>
+                  <p class="card-text g-text">
+                    Created by {{s['author']}}
+                  </p>
+                </div>
+              </div>
+            </a>
+          </div>
+        
+
+        {%endfor%}
+      </div>
 
     </div>
 
-    <footer class="black-bg footer-row footer">
-        <p class="font-weight-normal white footer-item">Safely Stat</p>
-     </footer>
+    {% include 'footer.html' %}
     <!-- <script src="../static/format.js"></script> -->
 
     <script
