--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         <div class="col-md-5 p-lg-5 mx-auto my-5">
           <h1 class="display-4 font-weight-normal h-text">Safely Stat</h1>
           <p class="lead font-weight-normal h-text">A Differential Privacy Platform</p>
-          <a class="btn btn-outline-secondary upload-btn" href="mydata"
+          <a class="btn btn-outline-secondary upload-btn" href="{{ url_for('page.mydata') }}"
             >Upload Your Data</a
           >
         </div>
@@ -89,9 +89,7 @@
       </div>
     </div>
 
-    <footer class="black-bg footer-row footer">
-      <p class="font-weight-normal white footer-item">Safely Stat</p>
-    </footer>
+    {% include 'footer.html' %}
     <!-- <script src="../static/format.js"></script> -->
 
     <script
