--- a/templates/nav.html
+++ b/templates/nav.html
@@ -84,7 +84,7 @@
               <a class="nav-link" href="{{ url_for('page.about') }}">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('page.gallery') }}">Gallery</a>
+              <a class="nav-link" href="{{ url_for('data.gallery') }}">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('page.mydata') }}">MyData</a>
