--- a/templates/uploadglobal.html
+++ b/templates/uploadglobal.html
@@ -128,9 +128,8 @@
         </div>
       </div>
     </div>
-    <footer class="black-bg footer-row footer">
-      <p class="font-weight-normal white footer-item">Safely Stat</p>
-    </footer>
+    
+    {% include 'footer.html' %}
 
     <!-- Scripts -->
     <script src="../static/format.js"></script>
