--- a/templates/uploadlocal.html
+++ b/templates/uploadlocal.html
@@ -80,9 +80,8 @@
         </div>
       </div>
     </div>
-    <footer class="black-bg footer-row footer">
-      <p class="font-weight-normal white footer-item">Safely Stat</p>
-    </footer>
+    
+    {% include 'footer.html' %}
 
     <!-- Scripts -->
     <script src="../static/upload.js"></script>
