--- a/templates/mydata.html
+++ b/templates/mydata.html
@@ -14,8 +14,8 @@
       crossorigin="anonymous"
     />
 
-    <link href="../static/mydata.css" rel="stylesheet" />
-    <link href="../static/nav.css" rel="stylesheet" />
+    <link href={{url_for('static', filename='style/mydata.css')}} rel="stylesheet" />
+    <link href={{url_for('static', filename='style/nav.css')}} rel="stylesheet" />
 
     <title>Safely Stat</title>
   </head>
