--- a/templates/viewdata.html
+++ b/templates/viewdata.html
@@ -14,8 +14,8 @@
       crossorigin="anonymous"
     />
 
-    <link href="../static/nav.css" rel="stylesheet" />
-    <link href="../static/viewdata.css" rel="stylesheet" />
+    <link href={{url_for('static', filename='style/nav.css')}} rel="stylesheet" />
+    <link href={{url_for('static', filename='style/viewdata.css')}} rel="stylesheet" />
 
     <base href="http://127.0.0.1:8000/" />
 
