--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
       crossorigin="anonymous"
     />
 
-    <link href="../static/home.css" rel="stylesheet" />
-    <link href="../static/nav.css" rel="stylesheet" />
+    <link href={{url_for('static', filename='style/home.css')}} rel="stylesheet" />
+    <link href={{url_for('static', filename='style/nav.css')}} rel="stylesheet" />
 
     <title>Safely Stat</title>
   </head>
