--- a/templates/uploadglobal.html
+++ b/templates/uploadglobal.html
@@ -26,7 +26,7 @@
       <div class="row">
         <div class="upload-form col-sm-12">
           <h3>Upload Dataset</h3>
-          <form id="dataInput" class="border-top">
+          <form id="dataInput">
             <label for="datasetTitle" class="form-label mt-2">Title</label>
             <input
               type="text"
@@ -53,7 +53,7 @@
             </div> -->
             <!-- Stats -->
             <div id="stats" class="mt-4 border-top">
-                <h5 class="mt-3">Field Statistics</h5>
+                <h5 class="mt-4">Field Statistics</h5>
                 <p class="mt-2 mb-2 container-fluid">In the following section, specify the fields (columns) in your dataset and the corresponding statistics
                   that you wish to include in the gallery piece. To add a field, press the "Add Field" button. To add a
                   statistic for a column, press the "Add Stat" button. Please note, when you upload your CSV dataset, your data
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <!-- Stats -->
-            <div class="border-top mt-3">
+            <div class="mt-4 border-top">
             <h5 class="mt-3">Upload CSV Dataset</h5>
             <label for="formFile" class="form-label">CSV File</label>
             <input class="form-control" type="file" id="csvFile">
