--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,6 @@
 <footer class="black-bg footer-row footer">
-    <a href="{{ url_for('page.index') }}" class="f-con mt-4"> 
+  <div class="foot-container">
+    <a href="{{ url_for('page.index') }}" class="f-con"> 
 
         <?xml version="1.0" standalone="no"?>
         <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
@@ -60,4 +61,5 @@
         
 
       </a>
+    </div>
 </footer>
