--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="icon" href={{url_for('static', filename='utils/logo.png')}}>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <!-- Bootstrap CSS -->
     <link
@@ -30,7 +32,7 @@
       <!-- Header -->
       <div class="row">
         <div class="g-grad">
-          <h1 class="g-title mt-2">Gallery</h1>
+          <h1 class="g-title mt-2">The Gallery</h1>
         </div>
         
       </div>
