--- a/templates/mydata.html
+++ b/templates/mydata.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="icon" href={{url_for('static', filename='utils/logo.png')}}>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <!-- Bootstrap CSS -->
     <link
@@ -54,7 +56,7 @@
               <h5 class="card-title">Datasets</h5>
               <p class="card-text">
                 To view your uploaded datasets, scroll down and view the various
-                gallery pieces attributed to you. If there are no gallery pieces,
+                gallery pieces attributed to you or visit The Gallery. If there are no gallery pieces,
                 upload a dataset!
               </p>
             </div>
