--- a/templates/nav.html
+++ b/templates/nav.html
@@ -81,7 +81,7 @@
               <a class="nav-link" href="{{ url_for('page.index') }}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('page.about') }}">About</a>
+              <a class="nav-link" href="{{ url_for('page.resources') }}">Resources</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('page.gallery') }}">Gallery</a>
