--- a/templates/uploadlocal.html
+++ b/templates/uploadlocal.html
@@ -5,7 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="icon" href={{url_for('static', filename='utils/logo.png')}}>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script defer src="https://pyscript.net/releases/2022.12.1/pyscript.js"></script>
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -80,6 +84,39 @@
         </div>
       </div>
     </div>
+
+    <py-script>
+      import js
+      from pyodide.ffi.wrappers import add_event_listener
+      import asnycio
+      import json
+      from request import request
+
+      async def upload_and_run(event):
+        baseurl = js.window.location.origin
+
+        title = Element('datasetTitle').value
+        desc = Element('datasetDesc').value
+        field = Element('columnTitle').value
+        dataset = Element('csvFile').value
+
+        # LOCAL DP CODE
+
+        # POST REQUEST
+        headers = {"Content-type": "application/json"}
+        body = json.dumps({
+          "title": title,
+          "description": description,
+          "local": true
+          ... # FINISH THIS
+        })
+        post = await request(f"{baseurl}/upload", body=body, method="POST", headers = headers)
+        print(f"POST request=> status:{new_post.status}, json:{await new_post.json()}")
+
+      csv_input = js.document.getElementById('csvFile')
+      add_event_listener(csv_input, "change", upload_and_run())
+      asyncio.ensure_future(upload_and_run())
+    </py-script>
     
     {% include 'footer.html' %}
 
